[package]
name = "solana-escrow-sample"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "=1.8.5"
thiserror = "1.0.24"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
arrayref = "0.3.6"
solana-frozen-abi = "=1.8.5"
zeroize = "=1.4.3"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.8.5"
solana-sdk = "=1.8.5"
solana-validator = "=1.8.5"

[lib]
crate-type = ["cdylib", "lib"]
